# ShopUcDyaDya

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  flake8.ini  mypy.ini  pyproject.toml  pytest.ini
backend/app/api/: exception_handler.py
backend/app/api/routers/: __init__.py  promocode.py
backend/app/api/schemas/: __init__.py  promo.py
backend/app/application/: create_app.py  main.py  run_main.py
backend/app/application/di/: __init__.py  container.py
backend/app/application/di/providers/: __init__.py  database.py  services.py  (+1 more)
backend/app/application/services/: __init__.py  promo.py
backend/app/domain/entities/: __init__.py  base.py  promo.py
backend/app/domain/enums/: __init__.py  promo.py
backend/app/domain/events/: __init__.py  promo.py
backend/app/domain/exceptions/: __init__.py  promo.py
backend/app/domain/repositories/: __init__.py  promo.py
backend/app/domain/services/: __init__.py  promo.py
backend/app/domain/values/: __init__.py  promo.py
backend/app/infra/broker/: __init__.py  taskiq_rabbitmq.py
backend/app/infra/cache/: __init__.py  taskiq_redis.py
backend/app/settings/: app.py  config.py  logger.py
backend/migrations/: env.py
backend/scripts/: migrate.sh
backend/tests/: conftest.py
backend/tests/unit/: conftest.py  test_database.py
backend/tests/unit/mocks/: __init__.py  promo_repository.py
backend/tests/unit/promo/: conftest.py  test_promo_entities.py  test_promo_exceptions.py  test_promo_validator.py  test_promo_values.py
(+8 files in other folders)
