[project]
name = "backend"
version = "0.1.1"
description = ""
authors = [
    {name = "TysboProg",email = "166642110+TysboProg@users.noreply.github.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "fastapi-users (>=15.0.1,<16.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "faker (>=37.12.0,<38.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
